[package]
name = "microwork-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moleculer = "0.3.5"
pretty_env_logger = "0.4.0"
serde = "1.0.144"
tokio = { version = "1.20.1", features = ["full"] }
color-eyre = "0.6.2"
serde_json = "1.0.85"
rayon = "1.5.3"